k8s/bonus/deployment-app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-python-v2
  namespace: devops-lab09
  labels:
    app: devops-python-v2
    app.kubernetes.io/name: devops-python-v2
    app.kubernetes.io/component: api
spec:
  replicas: 2
  revisionHistoryLimit: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: devops-python-v2
  template:
    metadata:
      labels:
        app: devops-python-v2
        app.kubernetes.io/name: devops-python-v2
    spec:
      containers:
        - name: devops-python-v2
          image: 112005/devops-lab3-python:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
